--- a/photos.html
+++ b/photos.html
@@ -4,23 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>lines</title>
+    <title>Document</title>
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.dom.min.js"></script>
-    <style>
-    body{ background:black; margin: 0px;padding: 0px;}
-    p{
-        color:#aaa;
-    }
-    </style>
 </head>
-
 <body>
         <script src="libraries/CCapture.all.min.js"></script>
-    <script src="dots.js"></script> 
-    <script src="horizontalLines.js"></script>
-    <!-- <script src="photos.js"></script> -->
-    <script src="script.js"></script>
+        <script src="photos.js"></script>
 
 </body>
 </html>
