--- a/video.html
+++ b/video.html
@@ -4,23 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>lines</title>
+    <title>video</title>
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.dom.min.js"></script>
     <style>
     body{ background:black; margin: 0px;padding: 0px;}
-    p{
-        color:#aaa;
-    }
     </style>
 </head>
 
 <body>
-        <script src="libraries/CCapture.all.min.js"></script>
-    <script src="dots.js"></script> 
-    <script src="horizontalLines.js"></script>
-    <!-- <script src="photos.js"></script> -->
-    <script src="script.js"></script>
+    <script src="libraries/seriously.js"></script>
+    <script src="libraries/effects/seriously.blur.js"></script>
+    <script src="videoSegments.js"></script>
 
 </body>
 </html>
